Fixed AGHI-303: Aligned login logo and text in center on login page, changed the form link button colors and made them clickable everywhere.

--- a/aagahi-web/src/index.css
+++ b/aagahi-web/src/index.css
@@ -286,8 +286,20 @@ code {
   justify-content: center !important;
 }
 
-#abc {
-  font-size: '1.5em !important';
-  padding-right: '2em';
-  margin-left: 18%;
+#loginAahungLogo {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#loginHeading {
+  text-align: center;
+}
+
+.formLink {
+  display: inline-block; 
+  width: 100%;
+  color: #880e4f;
+  font-size: 1.1em;
+  font-weight: 400;
 }
